backend/analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROBA
    BOOLEANO
    BREAK
    CARACTER
    CASE
    COMA
    COMENTARIO_MULTILINEA
    COMENTARIO_UNA_LINEA
    CONTINUE
    DEFAULT
    DO
    DO_WHILE
    ELSE
    FALSE
    FOR
    IDENTIFICADOR
    IF
    IGUALACION
    LLA
    LLC
    MODULO
    POTENCIA
    RETURN
    SWITCH
    TRUE
    UMENOS
    VAR
    WHILE
    XOR

Grammar

Rule 0     S' -> ini
Rule 1     ini -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> instruccion_print PYC
Rule 5     instruccion -> declaracion_variable PYC
Rule 6     instruccion -> asignacion_variable PYC
Rule 7     instruccion_print -> tipo_print PARA expresion PARC
Rule 8     tipo_print -> PRINT
Rule 9     tipo_print -> PRINTLN
Rule 10    declaracion_variable -> tipo ID IGUAL expresion
Rule 11    asignacion_variable -> ID IGUAL expresion
Rule 12    expresion -> aritmetica
Rule 13    expresion -> literal
Rule 14    expresion -> relacional
Rule 15    expresion -> logica
Rule 16    aritmetica -> expresion SUMA expresion
Rule 17    aritmetica -> expresion RESTA expresion
Rule 18    aritmetica -> expresion MULTIPLICACION expresion
Rule 19    aritmetica -> expresion DIVISION expresion
Rule 20    logica -> expresion AND expresion
Rule 21    logica -> expresion OR expresion
Rule 22    logica -> NOT expresion
Rule 23    relacional -> expresion IGUAL expresion
Rule 24    relacional -> expresion DIFERENCIACION expresion
Rule 25    relacional -> expresion MENOR expresion
Rule 26    relacional -> expresion MAYOR expresion
Rule 27    relacional -> expresion MENOR_IGUAL expresion
Rule 28    relacional -> expresion MAYOR_IGUAL expresion
Rule 29    literal -> ENTERO
Rule 30    literal -> CADENAS
Rule 31    literal -> DECIMAL
Rule 32    literal -> ID
Rule 33    tipo -> INT
Rule 34    tipo -> FLOAT
Rule 35    tipo -> STR
Rule 36    tipo -> CHAR
Rule 37    tipo -> BOOLEAN

Terminals, with rules where they appear

AND                  : 20
ARROBA               : 
BOOLEAN              : 37
BOOLEANO             : 
BREAK                : 
CADENAS              : 30
CARACTER             : 
CASE                 : 
CHAR                 : 36
COMA                 : 
COMENTARIO_MULTILINEA : 
COMENTARIO_UNA_LINEA : 
CONTINUE             : 
DECIMAL              : 31
DEFAULT              : 
DIFERENCIACION       : 24
DIVISION             : 19
DO                   : 
DO_WHILE             : 
ELSE                 : 
ENTERO               : 29
FALSE                : 
FLOAT                : 34
FOR                  : 
ID                   : 10 11 32
IDENTIFICADOR        : 
IF                   : 
IGUAL                : 10 11 23
IGUALACION           : 
INT                  : 33
LLA                  : 
LLC                  : 
MAYOR                : 26
MAYOR_IGUAL          : 28
MENOR                : 25
MENOR_IGUAL          : 27
MODULO               : 
MULTIPLICACION       : 18
NOT                  : 22
OR                   : 21
PARA                 : 7
PARC                 : 7
POTENCIA             : 
PRINT                : 8
PRINTLN              : 9
PYC                  : 4 5 6
RESTA                : 17
RETURN               : 
STR                  : 35
SUMA                 : 16
SWITCH               : 
TRUE                 : 
UMENOS               : 
VAR                  : 
WHILE                : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

aritmetica           : 12
asignacion_variable  : 6
declaracion_variable : 5
expresion            : 7 10 11 16 16 17 17 18 18 19 19 20 20 21 21 22 23 23 24 24 25 25 26 26 27 27 28 28
ini                  : 0
instruccion          : 2 3
instruccion_print    : 4
instrucciones        : 1 2
literal              : 13
logica               : 15
relacional           : 14
tipo                 : 10
tipo_print           : 7

Parsing method: LALR

state 0

    (0) S' -> . ini
    (1) ini -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . instruccion_print PYC
    (5) instruccion -> . declaracion_variable PYC
    (6) instruccion -> . asignacion_variable PYC
    (7) instruccion_print -> . tipo_print PARA expresion PARC
    (10) declaracion_variable -> . tipo ID IGUAL expresion
    (11) asignacion_variable -> . ID IGUAL expresion
    (8) tipo_print -> . PRINT
    (9) tipo_print -> . PRINTLN
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . STR
    (36) tipo -> . CHAR
    (37) tipo -> . BOOLEAN

    ID              shift and go to state 9
    PRINT           shift and go to state 10
    PRINTLN         shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STR             shift and go to state 14
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 16

    ini                            shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instruccion_print              shift and go to state 4
    declaracion_variable           shift and go to state 5
    asignacion_variable            shift and go to state 6
    tipo_print                     shift and go to state 7
    tipo                           shift and go to state 8

state 1

    (0) S' -> ini .



state 2

    (1) ini -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . instruccion_print PYC
    (5) instruccion -> . declaracion_variable PYC
    (6) instruccion -> . asignacion_variable PYC
    (7) instruccion_print -> . tipo_print PARA expresion PARC
    (10) declaracion_variable -> . tipo ID IGUAL expresion
    (11) asignacion_variable -> . ID IGUAL expresion
    (8) tipo_print -> . PRINT
    (9) tipo_print -> . PRINTLN
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . STR
    (36) tipo -> . CHAR
    (37) tipo -> . BOOLEAN

    $end            reduce using rule 1 (ini -> instrucciones .)
    ID              shift and go to state 9
    PRINT           shift and go to state 10
    PRINTLN         shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STR             shift and go to state 14
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 16

    instruccion                    shift and go to state 17
    instruccion_print              shift and go to state 4
    declaracion_variable           shift and go to state 5
    asignacion_variable            shift and go to state 6
    tipo_print                     shift and go to state 7
    tipo                           shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    ID              reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    INT             reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    STR             reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    BOOLEAN         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> instruccion_print . PYC

    PYC             shift and go to state 18


state 5

    (5) instruccion -> declaracion_variable . PYC

    PYC             shift and go to state 19


state 6

    (6) instruccion -> asignacion_variable . PYC

    PYC             shift and go to state 20


state 7

    (7) instruccion_print -> tipo_print . PARA expresion PARC

    PARA            shift and go to state 21


state 8

    (10) declaracion_variable -> tipo . ID IGUAL expresion

    ID              shift and go to state 22


state 9

    (11) asignacion_variable -> ID . IGUAL expresion

    IGUAL           shift and go to state 23


state 10

    (8) tipo_print -> PRINT .

    PARA            reduce using rule 8 (tipo_print -> PRINT .)


state 11

    (9) tipo_print -> PRINTLN .

    PARA            reduce using rule 9 (tipo_print -> PRINTLN .)


state 12

    (33) tipo -> INT .

    ID              reduce using rule 33 (tipo -> INT .)


state 13

    (34) tipo -> FLOAT .

    ID              reduce using rule 34 (tipo -> FLOAT .)


state 14

    (35) tipo -> STR .

    ID              reduce using rule 35 (tipo -> STR .)


state 15

    (36) tipo -> CHAR .

    ID              reduce using rule 36 (tipo -> CHAR .)


state 16

    (37) tipo -> BOOLEAN .

    ID              reduce using rule 37 (tipo -> BOOLEAN .)


state 17

    (2) instrucciones -> instrucciones instruccion .

    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INT             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FLOAT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    STR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CHAR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BOOLEAN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 18

    (4) instruccion -> instruccion_print PYC .

    ID              reduce using rule 4 (instruccion -> instruccion_print PYC .)
    PRINT           reduce using rule 4 (instruccion -> instruccion_print PYC .)
    PRINTLN         reduce using rule 4 (instruccion -> instruccion_print PYC .)
    INT             reduce using rule 4 (instruccion -> instruccion_print PYC .)
    FLOAT           reduce using rule 4 (instruccion -> instruccion_print PYC .)
    STR             reduce using rule 4 (instruccion -> instruccion_print PYC .)
    CHAR            reduce using rule 4 (instruccion -> instruccion_print PYC .)
    BOOLEAN         reduce using rule 4 (instruccion -> instruccion_print PYC .)
    $end            reduce using rule 4 (instruccion -> instruccion_print PYC .)


state 19

    (5) instruccion -> declaracion_variable PYC .

    ID              reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    PRINT           reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    PRINTLN         reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    INT             reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    FLOAT           reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    STR             reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    CHAR            reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    BOOLEAN         reduce using rule 5 (instruccion -> declaracion_variable PYC .)
    $end            reduce using rule 5 (instruccion -> declaracion_variable PYC .)


state 20

    (6) instruccion -> asignacion_variable PYC .

    ID              reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    PRINT           reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    PRINTLN         reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    INT             reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    FLOAT           reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    STR             reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    CHAR            reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    BOOLEAN         reduce using rule 6 (instruccion -> asignacion_variable PYC .)
    $end            reduce using rule 6 (instruccion -> asignacion_variable PYC .)


state 21

    (7) instruccion_print -> tipo_print PARA . expresion PARC
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 24
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 22

    (10) declaracion_variable -> tipo ID . IGUAL expresion

    IGUAL           shift and go to state 34


state 23

    (11) asignacion_variable -> ID IGUAL . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 35
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 24

    (7) instruccion_print -> tipo_print PARA expresion . PARC
    (16) aritmetica -> expresion . SUMA expresion
    (17) aritmetica -> expresion . RESTA expresion
    (18) aritmetica -> expresion . MULTIPLICACION expresion
    (19) aritmetica -> expresion . DIVISION expresion
    (23) relacional -> expresion . IGUAL expresion
    (24) relacional -> expresion . DIFERENCIACION expresion
    (25) relacional -> expresion . MENOR expresion
    (26) relacional -> expresion . MAYOR expresion
    (27) relacional -> expresion . MENOR_IGUAL expresion
    (28) relacional -> expresion . MAYOR_IGUAL expresion
    (20) logica -> expresion . AND expresion
    (21) logica -> expresion . OR expresion

    PARC            shift and go to state 36
    SUMA            shift and go to state 37
    RESTA           shift and go to state 38
    MULTIPLICACION  shift and go to state 39
    DIVISION        shift and go to state 40
    IGUAL           shift and go to state 41
    DIFERENCIACION  shift and go to state 42
    MENOR           shift and go to state 43
    MAYOR           shift and go to state 44
    MENOR_IGUAL     shift and go to state 45
    MAYOR_IGUAL     shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 25

    (12) expresion -> aritmetica .

    PARC            reduce using rule 12 (expresion -> aritmetica .)
    SUMA            reduce using rule 12 (expresion -> aritmetica .)
    RESTA           reduce using rule 12 (expresion -> aritmetica .)
    MULTIPLICACION  reduce using rule 12 (expresion -> aritmetica .)
    DIVISION        reduce using rule 12 (expresion -> aritmetica .)
    IGUAL           reduce using rule 12 (expresion -> aritmetica .)
    DIFERENCIACION  reduce using rule 12 (expresion -> aritmetica .)
    MENOR           reduce using rule 12 (expresion -> aritmetica .)
    MAYOR           reduce using rule 12 (expresion -> aritmetica .)
    MENOR_IGUAL     reduce using rule 12 (expresion -> aritmetica .)
    MAYOR_IGUAL     reduce using rule 12 (expresion -> aritmetica .)
    AND             reduce using rule 12 (expresion -> aritmetica .)
    OR              reduce using rule 12 (expresion -> aritmetica .)
    PYC             reduce using rule 12 (expresion -> aritmetica .)


state 26

    (13) expresion -> literal .

    PARC            reduce using rule 13 (expresion -> literal .)
    SUMA            reduce using rule 13 (expresion -> literal .)
    RESTA           reduce using rule 13 (expresion -> literal .)
    MULTIPLICACION  reduce using rule 13 (expresion -> literal .)
    DIVISION        reduce using rule 13 (expresion -> literal .)
    IGUAL           reduce using rule 13 (expresion -> literal .)
    DIFERENCIACION  reduce using rule 13 (expresion -> literal .)
    MENOR           reduce using rule 13 (expresion -> literal .)
    MAYOR           reduce using rule 13 (expresion -> literal .)
    MENOR_IGUAL     reduce using rule 13 (expresion -> literal .)
    MAYOR_IGUAL     reduce using rule 13 (expresion -> literal .)
    AND             reduce using rule 13 (expresion -> literal .)
    OR              reduce using rule 13 (expresion -> literal .)
    PYC             reduce using rule 13 (expresion -> literal .)


state 27

    (14) expresion -> relacional .

    PARC            reduce using rule 14 (expresion -> relacional .)
    SUMA            reduce using rule 14 (expresion -> relacional .)
    RESTA           reduce using rule 14 (expresion -> relacional .)
    MULTIPLICACION  reduce using rule 14 (expresion -> relacional .)
    DIVISION        reduce using rule 14 (expresion -> relacional .)
    IGUAL           reduce using rule 14 (expresion -> relacional .)
    DIFERENCIACION  reduce using rule 14 (expresion -> relacional .)
    MENOR           reduce using rule 14 (expresion -> relacional .)
    MAYOR           reduce using rule 14 (expresion -> relacional .)
    MENOR_IGUAL     reduce using rule 14 (expresion -> relacional .)
    MAYOR_IGUAL     reduce using rule 14 (expresion -> relacional .)
    AND             reduce using rule 14 (expresion -> relacional .)
    OR              reduce using rule 14 (expresion -> relacional .)
    PYC             reduce using rule 14 (expresion -> relacional .)


state 28

    (15) expresion -> logica .

    PARC            reduce using rule 15 (expresion -> logica .)
    SUMA            reduce using rule 15 (expresion -> logica .)
    RESTA           reduce using rule 15 (expresion -> logica .)
    MULTIPLICACION  reduce using rule 15 (expresion -> logica .)
    DIVISION        reduce using rule 15 (expresion -> logica .)
    IGUAL           reduce using rule 15 (expresion -> logica .)
    DIFERENCIACION  reduce using rule 15 (expresion -> logica .)
    MENOR           reduce using rule 15 (expresion -> logica .)
    MAYOR           reduce using rule 15 (expresion -> logica .)
    MENOR_IGUAL     reduce using rule 15 (expresion -> logica .)
    MAYOR_IGUAL     reduce using rule 15 (expresion -> logica .)
    AND             reduce using rule 15 (expresion -> logica .)
    OR              reduce using rule 15 (expresion -> logica .)
    PYC             reduce using rule 15 (expresion -> logica .)


state 29

    (29) literal -> ENTERO .

    PARC            reduce using rule 29 (literal -> ENTERO .)
    SUMA            reduce using rule 29 (literal -> ENTERO .)
    RESTA           reduce using rule 29 (literal -> ENTERO .)
    MULTIPLICACION  reduce using rule 29 (literal -> ENTERO .)
    DIVISION        reduce using rule 29 (literal -> ENTERO .)
    IGUAL           reduce using rule 29 (literal -> ENTERO .)
    DIFERENCIACION  reduce using rule 29 (literal -> ENTERO .)
    MENOR           reduce using rule 29 (literal -> ENTERO .)
    MAYOR           reduce using rule 29 (literal -> ENTERO .)
    MENOR_IGUAL     reduce using rule 29 (literal -> ENTERO .)
    MAYOR_IGUAL     reduce using rule 29 (literal -> ENTERO .)
    AND             reduce using rule 29 (literal -> ENTERO .)
    OR              reduce using rule 29 (literal -> ENTERO .)
    PYC             reduce using rule 29 (literal -> ENTERO .)


state 30

    (30) literal -> CADENAS .

    PARC            reduce using rule 30 (literal -> CADENAS .)
    SUMA            reduce using rule 30 (literal -> CADENAS .)
    RESTA           reduce using rule 30 (literal -> CADENAS .)
    MULTIPLICACION  reduce using rule 30 (literal -> CADENAS .)
    DIVISION        reduce using rule 30 (literal -> CADENAS .)
    IGUAL           reduce using rule 30 (literal -> CADENAS .)
    DIFERENCIACION  reduce using rule 30 (literal -> CADENAS .)
    MENOR           reduce using rule 30 (literal -> CADENAS .)
    MAYOR           reduce using rule 30 (literal -> CADENAS .)
    MENOR_IGUAL     reduce using rule 30 (literal -> CADENAS .)
    MAYOR_IGUAL     reduce using rule 30 (literal -> CADENAS .)
    AND             reduce using rule 30 (literal -> CADENAS .)
    OR              reduce using rule 30 (literal -> CADENAS .)
    PYC             reduce using rule 30 (literal -> CADENAS .)


state 31

    (31) literal -> DECIMAL .

    PARC            reduce using rule 31 (literal -> DECIMAL .)
    SUMA            reduce using rule 31 (literal -> DECIMAL .)
    RESTA           reduce using rule 31 (literal -> DECIMAL .)
    MULTIPLICACION  reduce using rule 31 (literal -> DECIMAL .)
    DIVISION        reduce using rule 31 (literal -> DECIMAL .)
    IGUAL           reduce using rule 31 (literal -> DECIMAL .)
    DIFERENCIACION  reduce using rule 31 (literal -> DECIMAL .)
    MENOR           reduce using rule 31 (literal -> DECIMAL .)
    MAYOR           reduce using rule 31 (literal -> DECIMAL .)
    MENOR_IGUAL     reduce using rule 31 (literal -> DECIMAL .)
    MAYOR_IGUAL     reduce using rule 31 (literal -> DECIMAL .)
    AND             reduce using rule 31 (literal -> DECIMAL .)
    OR              reduce using rule 31 (literal -> DECIMAL .)
    PYC             reduce using rule 31 (literal -> DECIMAL .)


state 32

    (32) literal -> ID .

    PARC            reduce using rule 32 (literal -> ID .)
    SUMA            reduce using rule 32 (literal -> ID .)
    RESTA           reduce using rule 32 (literal -> ID .)
    MULTIPLICACION  reduce using rule 32 (literal -> ID .)
    DIVISION        reduce using rule 32 (literal -> ID .)
    IGUAL           reduce using rule 32 (literal -> ID .)
    DIFERENCIACION  reduce using rule 32 (literal -> ID .)
    MENOR           reduce using rule 32 (literal -> ID .)
    MAYOR           reduce using rule 32 (literal -> ID .)
    MENOR_IGUAL     reduce using rule 32 (literal -> ID .)
    MAYOR_IGUAL     reduce using rule 32 (literal -> ID .)
    AND             reduce using rule 32 (literal -> ID .)
    OR              reduce using rule 32 (literal -> ID .)
    PYC             reduce using rule 32 (literal -> ID .)


state 33

    (22) logica -> NOT . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 49
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 34

    (10) declaracion_variable -> tipo ID IGUAL . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 50
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 35

    (11) asignacion_variable -> ID IGUAL expresion .
    (16) aritmetica -> expresion . SUMA expresion
    (17) aritmetica -> expresion . RESTA expresion
    (18) aritmetica -> expresion . MULTIPLICACION expresion
    (19) aritmetica -> expresion . DIVISION expresion
    (23) relacional -> expresion . IGUAL expresion
    (24) relacional -> expresion . DIFERENCIACION expresion
    (25) relacional -> expresion . MENOR expresion
    (26) relacional -> expresion . MAYOR expresion
    (27) relacional -> expresion . MENOR_IGUAL expresion
    (28) relacional -> expresion . MAYOR_IGUAL expresion
    (20) logica -> expresion . AND expresion
    (21) logica -> expresion . OR expresion

    PYC             reduce using rule 11 (asignacion_variable -> ID IGUAL expresion .)
    SUMA            shift and go to state 37
    RESTA           shift and go to state 38
    MULTIPLICACION  shift and go to state 39
    DIVISION        shift and go to state 40
    IGUAL           shift and go to state 41
    DIFERENCIACION  shift and go to state 42
    MENOR           shift and go to state 43
    MAYOR           shift and go to state 44
    MENOR_IGUAL     shift and go to state 45
    MAYOR_IGUAL     shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 36

    (7) instruccion_print -> tipo_print PARA expresion PARC .

    PYC             reduce using rule 7 (instruccion_print -> tipo_print PARA expresion PARC .)


state 37

    (16) aritmetica -> expresion SUMA . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 51
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 38

    (17) aritmetica -> expresion RESTA . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 52
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 39

    (18) aritmetica -> expresion MULTIPLICACION . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 53
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 40

    (19) aritmetica -> expresion DIVISION . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion

    ENTERO          shift and go to state 29
    CADENAS         shift and go to state 30
    DECIMAL         shift and go to state 31
    ID              shift and go to state 32
    NOT             shift and go to state 33

    expresion                      shift and go to state 54
    aritmetica                     shift and go to state 25
    literal                        shift and go to state 26
    relacional                     shift and go to state 27
    logica                         shift and go to state 28

state 41

    (23) relacional -> expresion IGUAL . expresion
    (12) expresion -> . aritmetica
    (13) expresion -> . literal
    (14) expresion -> . relacional
    (15) expresion -> . logica
    (16) aritmetica -> . expresion SUMA expresion
    (17) aritmetica -> . expresion RESTA expresion
    (18) aritmetica -> . expresion MULTIPLICACION expresion
    (19) aritmetica -> . expresion DIVISION expresion
    (29) literal -> . ENTERO
    (30) literal -> . CADENAS
    (31) literal -> . DECIMAL
    (32) literal -> . ID
    (23) relacional -> . expresion IGUAL expresion
    (24) relacional -> . expresion DIFERENCIACION expresion
    (25) relacional -> . expresion MENOR expresion
    (26) relacional -> . expresion MAYOR expresion
    (27) relacional -> . expresion MENOR_IGUAL expresion
    (28) relacional -> . expresion MAYOR_IGUAL expresion
    (20) logica -> . expresion AND expresion
    (21) logica -> . expresion OR expresion
    (22) logica -> . NOT expresion
